@@ -16,7 +16,7 @@ import java.util.stream.Collectors;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.TextComponent;
 import net.kyori.adventure.text.format.NamedTextColor;
-import org.apache.commons.lang.WordUtils;
+import org.apache.commons.lang3.text.WordUtils;
 import org.bukkit.ChatColor;
 import org.bukkit.DyeColor;
 import org.bukkit.Material;
@@ -25,7 +25,7 @@ import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import tc.oc.pgm.api.player.MatchPlayer;
-import tc.oc.pgm.kits.tag.ItemModifier;
+import tc.oc.pgm.kits.tag.TeamColorApplicator;
 import tc.oc.pgm.menu.InventoryMenu;
 import tc.oc.pgm.shops.Shop;
 import tc.oc.pgm.util.inventory.ItemBuilder;
@@ -239,7 +239,7 @@ public class ShopMenu extends InventoryMenu {
 
     // Display free or single item price on the same line as cost
     if (price.size() == 1) {
-      cost.append(price.get(0));
+      cost.append(price.getFirst());
     }
 
     Component click =
@@ -249,7 +249,7 @@ public class ShopMenu extends InventoryMenu {
     String clickLore = TextTranslations.translateLegacy(click, getBukkit());
 
     ItemStack item = icon.getItem().clone();
-    ItemModifier.apply(item, getViewer());
+    TeamColorApplicator.apply(item, getViewer());
     ItemMeta meta = item.getItemMeta();
     List<String> lore = Lists.newArrayList();
     if (meta.getLore() != null) {
